fix: привести код в соответствие с замечаниями ревьюера